[package]
name = "batota"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.38.0", features = [
  "alloc",
   "Data_Xml_Dom",
   "Win32_Foundation",
   "Win32_System_Diagnostics_Debug",
   "Win32_Security",
   "Win32_System_Threading",
   "Win32_UI_WindowsAndMessaging",
   "Win32_System_Memory",
   "Win32_System_Diagnostics_ToolHelp",
   "Win32_UI_Input_KeyboardAndMouse",
   "Win32_System_LibraryLoader",
   "Win32_System_Console",
   "Win32_Graphics_Gdi"
  ] } 
anyhow = "1.0.58"
tracing = "0.1.37"
thiserror = "1.0.38"
